autoscaler/cluster-autoscaler/autoscaler-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autoscaler-metrics-service
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
    protocol: TCP
  selector:
    app: autoscaler-metrics-demo
  type: ClusterIP
